@@ -1,0 +1,8 @@
+
+RMV = rm -fv
+
+clean:
+	$(RMV) *.BAK .*.BAK *~ .*~
+	cd Body && make clean
+	cd Field && make clean
+	cd MIME && make clean
