@@ -1,3 +1,10 @@
+2002-05-26  wakaba <w@suika.fam.cx>
+
+	* Header.pm (url_mailto_safe): Removed.
+	(Moved to Message::Header::RFC822.)
+	
+	* Makefile: New file.
+
 2002-05-25  wakaba <w@suika.fam.cx>
 
 	* Entity.pm, Header.pm: Supports namespaced header
